# github-trending-firehose

./: .gitignore  Makefile  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: deploy-pages.yml  import-hf-projects.yml  scrape-developer-dry-run.yml  scrape-developer.yml  scrape-repository-dry-run.yml  scrape-repository.yml
archive/developer/2024/2024-12-02/: (null).json  c#.json  c++.json  c.json  css.json  dart.json  erlang.json  go.json  hcl.json  html.json  java.json  javascript.json  kotlin.json  lua.json  makefile.json  markdown.json  perl.json  php.json  python.json  r.json  ruby.json  rust.json  shell.json  svelte.json  swift.json  typescript.json  vue.json
archive/developer/2026/2026-02-06/: (null).json  c#.json  c++.json  c.json  css.json  dart.json  elixir.json  go.json  haskell.json  hcl.json  html.json  java.json  javascript.json  kotlin.json  lua.json  makefile.json  perl.json  php.json  python.json  r.json  ruby.json  rust.json  scala.json  shell.json  svelte.json  swift.json  typescript.json  vue.json
docs/: ADR.md
docs/sprints/: SPRINT-001-trending-analytics-webserver.md
py/: README.md  hf_trending_transform.py
py/gh_trending_analytics/: __init__.py  archive_reader.py  build.py  cli.py  manifest.py  rollup.py  utils.py
py/gh_trending_web/: app.py
py/tests/: api_contract_curl.sh  conftest.py  helpers.py  test_build.py  test_http_api.py  test_rollup_builder.py  test_rollup_semantics.py  test_streaks.py
src/: README.md  main.ts
src/ui/: server.ts
web/: app.js  index.html  styles.css
(+10859 files in other folders)
