[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-trending-analytics"
version = "0.1.0"
description = "Local analytics webserver for GitHub trending archive"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "duckdb>=0.10.0",
  "pyarrow>=14.0.0",
  "jinja2>=3.1.0",
  "pytest>=7.4.0",
  "httpx>=0.26.0",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["py/tests"]
addopts = "-q"
